# tickbutcher

./: .gitignore  README.md  pyproject.toml
data/: 1.py
data/put_to_db/: __main__.py
demo/: position.py  test_candlefeed.py  trading_pair_demo.py
demo/contemplationer/: demo1.py
demo/indicators/: __init__.py  indicator_back.py  ma.py  mfi.py  rsi_ema.py
demo/pandas/: __init__.py
demo/put_to_db_demo/: __init__.py
docs/: strategy_api.md  保证金处理问题.md  关于仓位管理的问题.md  关于手续费的设计.md  币安Binance.md  欧易okx.md  订单处理的一些问题备注.md
docs/brokers/: 订单交易流程资料.md
docs/ordermanage/: order.md  订单状态管理器设计思路.md
docs/仓位/: 永续合约仓位管理.md
docs/包管理/: 依赖管理.md
docs/指标/: mif.md
docs/资产/加密货币/: USDT.md  index.md
src/tickbutcher/: __init__.py  alphahub.py  candlefeed.py  contemplationer.py  order.py  trade.py  version.py
src/tickbutcher/Indicators/: __init__.py  indicator.py  ma.py  main_test.py  mfi.py  rsi.py
src/tickbutcher/brokers/: __init__.py  account.py  common_broker.py  margin.py  position.py
src/tickbutcher/candlefeed/: __init__.py  candlefeed.py  pandascandlefeed.py
src/tickbutcher/commission/: __init__.py
src/tickbutcher/indicator/: indicator.py  main.py
src/tickbutcher/indicators/: __init__.py  mfi.py  rsi.py
tests/: __init__.py
tests/benchmarktest/: datetime_test.py  num.py
tests/dataset/: __init__.py  btc.py  sol.py
tests/test_brokers/: common_broker.py  position.py
tests/test_candlefeed/: __init__.py
tests/test_contemplationer/: __init__.py
tests/test_order/: __init__.py  test_buy.py
ui/web-app/: package.json  pnpm-lock.yaml
(+31 files in other folders)
