[project]
name = "tickbutcher"
version = "0.1.0"
description = ""
authors = [
    {name = "ghostLostTheShell",email = "m18719301956@163.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy (>=2.0.43,<3.0.0)"]
asyncsqlchemy = ["sqlalchemy[asyncio] (>=2.0.43,<3.0.0)", "aiosqlite (>=0.21.0,<0.22.0)"]
matplotlib = ["matplotlib (>=3.10.6,<4.0.0)"]
httpx = ["httpx (>=0.28.1,<0.29.0)"]


[tool.poetry]
packages = [{include = "tickbutcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
